--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Canvas</title>
+	<title>Racing game</title>
 	<style type="text/css">
 		#canvas {
 			border-style: solid;
